<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_event"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/mata_terasa_perih"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:text="@string/category"
        android:textColor="@color/green_200"/>

    <TextView
        android:id="@+id/tv_item_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/tv_item_category"
        app:layout_constraintEnd_toEndOf="@id/card_view"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/headline"
        android:textColor="@color/black_200"/>

    <TextView
        android:id="@+id/tv_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        tools:text="@string/date"
        android:textColor="@color/green_300"/>

    <TextView
        android:id="@+id/tv_item_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/tv_item_headline"
        app:layout_constraintEnd_toEndOf="@id/card_view"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        tools:text="@string/author"/>



</androidx.constraintlayout.widget.ConstraintLayout>