<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailarticle.DetailArticleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_500">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/gradientbackground">


            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:background="@color/black"
                android:layout_height="240dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore= "ContentDescription"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mata_terasa_perih"/>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/text_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/constrain2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/headline"
            android:textColor="@color/black_500"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/text_headline"
            app:layout_constraintStart_toStartOf="@id/text_headline"
            tools:text="@string/author"/>
        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/green_300"
            app:layout_constraintTop_toBottomOf="@id/text_author"
            app:layout_constraintStart_toStartOf="@id/text_author"
            android:text="@string/date" />


        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_date"
            app:layout_constraintStart_toStartOf="@id/text_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textColor="@color/black"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>